argo/wailord/svcs/registry-pullthrough/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry

spec:
  selector:
    app: registry
  type: ClusterIP
  ports:
    - name: registry
      protocol: TCP
      port: 5000
      targetPort: 5000
