argo/wailord/svcs/registry-pullthrough/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cache.jsck.network`)
      priority: 10
      services:
        - name: registry
          port: 80
  tls:
    secretName: jsck.network-cert
